# porus

./: .gitignore  LICENSE  README.md  pyproject.toml
database/: __init__.py  column.py  engine.py  main.py  query.py  table.py  utilities.py
database/statement/: base_statement.py  clause_enums.py  delete.py  query.py  update.py
porus/: __init__.py  column.py  engine.py  main.py  table.py  utilities.py
porus/errors/: __init__.py  clause_errors.py
porus/statement/: __init__.py  base_statement.py  clause_enums.py  delete.py  query.py  update.py
test/: __init__.py  test_delete.py  test_main.py  test_relationship.py  test_replace.py  test_update.py
